--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="header-bottom">
-        <a href="#"><img src="images/outline_search_black_24dp.png">Alle</a>
+        <a href="#" class="active-tab"><img src="images/outline_search_black_24dp.png">Alle</a>
         <a href="#"><img src="images/outline_location_on_black_24dp.png">Maps</a>
         <a href="#"><img src="images/outline_article_black_24dp.png">Nyheter</a>
         <a href="#"><img src="images/outline_image_black_24dp.png">Bilder</a>
