La til alle linker

--- a/index.html
+++ b/index.html
@@ -32,7 +32,246 @@
         <button href="#" class="tools-btn">Verktøy</button> 
       </div>
     </header>
-    <div>content</div>
+    <div class="link-section">
+      <div class="top-ad">
+        <div class="website">
+          <div class="website-link">
+            <a href="#" class="website-link-link ad">https://www.wix.com/</a>
+            <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+            <a href="#" class="website-link-trans"></a>
+          </div>
+          <div class="website-title">
+            <a href="#">Build Your Website for Free - Create Your Stunning Website</a>
+          </div>
+          <div class="website-info">
+            <p>Wix makes building your website easy. Customize everything and get online now!</p>
+          </div>
+        </div>
+        <div class="top-tags">
+          <div class="top-tag">
+            <a href="#" class="top-tag-link">Free Website Builder</a>
+            <p class="top-tag-desc">Build Your Own Free Website Easy to Use, Design a Site Online!</p>
+          </div>
+          <div class="top-tag">
+            <a href="#" class="top-tag-link">Free Hosting</a>
+            <p class="top-tag-desc">100% Free Website Hosting & Design
+              Fast & Easy Online Website Builder</p>
+          </div>
+          <div class="top-tag">
+            <a href="#" class="top-tag-link">Online Store Builder</a>
+            <p class="top-tag-desc">Build Your Own Site in Minutes.
+              Open Your Store & Start Selling!</p>
+          </div>
+          <div class="top-tag">
+            <a href="#" class="top-tag-link">Customize Easily</a>
+            <p class="top-tag-desc">Just Choose a Template
+              And Start Creating in Minutes!</p>
+          </div>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link ad">https://www.thebest10websitehosting.com/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans"></a>
+        </div>
+        <div class="website-title">
+          <a href="#">10 Best Website Builders 2021 - The #1 Website Builder Ranking</a>
+        </div>
+        <div class="website-info">
+          <p>Compare The Best Website Builders Out There. Website Building was Never so Easy! Free Hosting Included. Easy-to-add Blog. 100s of Templates. Customizable Templates.</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">‎The #1 Website Builder</a>
+          <a href="#" class="tag">‎Small Business Website</a>
+          <a href="#" class="tag">Compare Website Builders</a>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link ad">https://www.thebest10websitebuilders.com/          </a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">10 Best Website Builders 2021 - The #1 Website Builder Ranking</a>
+        </div>
+        <div class="website-info">
+          <p>Compare The Best Website Builders Out There. Website Building was Never so Easy!</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">‎The #1 Website Builder</a>
+          <a href="#" class="tag">‎Compare Website Builders</a>
+          <a href="#" class="tag">Online Store Builders</a>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://victor-lf.github.io/google-search-results/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">build this webpage - GitHub Pages</a>
+        </div>
+        <div class="website-info">
+          <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://christine-27.github.io/google-homepage/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">build this webpage - GitHub Pages</a>
+        </div>
+        <div class="website-info">
+          <p>With zero coding experience, artist building 180 webpages . ... days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage ...</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.wix.com/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">Wix.com: Free Website Builder | Create a Free Website</a>
+        </div>
+        <div class="website-info">
+          <p>Create a professional website with the Wix website builder. ... Build professional web applications with serverless computing and hassle-free coding.</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">‎Learn How to Create a Website</a>
+          <a href="#" class="tag">Signing in to Your Wix Account</a>
+          <a href="#" class="tag">Support</a>
+          <a href="#" class="tag">Wix Blog</a>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.squarespace.com</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">Squarespace: Build a Website – Website Builder</a>
+        </div>
+        <div class="website-info">
+          <p>Squarespace is the all-in-one solution for anyone looking to create a beautiful website. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support ...</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">‎How To Build a Website</a>
+          <a href="#" class="tag">Pricing</a>
+          <a href="#" class="tag">Website Templates</a>
+          <a href="#" class="tag">Domain Name Search</a>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://websitesetup.org/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">How to Make a Website | Step-by-Step Guide for Beginners ...</a>
+        </div>
+        <div class="website-info">
+          <p>Step 1. Choose a website building platform — Squarespace is a very aesthetically beautiful website builder which makes creating beautiful websites easy, but ...</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.websitebuilderexpert.com/building-websites/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">How to Build a Website 2021 | A Step by Step Beginner's Guide</a>
+        </div>
+        <div class="website-info">
+          <p>7. jul. 2021 — How to build a website This post will cover the process of making a website with both a website builder and WordPress, with no steps left ...</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.website.com/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">Create Your Free Website | Free Website Builder | Website.com</a>
+        </div>
+        <div class="website-info">
+          <p>Domain names, web hosting, website templates, and ecommerce solutions included. ... Build client trust with a professional online presence.</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.w3schools.com/howto/howto_website.asp</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">How To Build a Website - W3Schools</a>
+        </div>
+        <div class="website-info">
+          <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, Python, PHP, Bootstrap, Java, ...</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">https://www.yola.com/</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">Yola - Make a Free Website</a>
+        </div>
+        <div class="website-info">
+          <p>Make a free website with our free website builder. We offer free hosting and a free website address. Get your business on Google, Yahoo & Bing today.</p>
+        </div>
+      </div>
+      <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link ad">https://www.best10ecommercesitebuilders.com/build/website</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">Best Guide to Build a Website - No Technical Skills Required</a>
+        </div>
+        <div class="website-info">
+          <p>Building a Free Website Was Never So Easy. Don't Pay a Proffesional. Just Do it Yourself! It's Easy. Compare the Best Platforms and Pick Yours. Best Price Guaranteed. Start Now!</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">‎#1 Website Builder</a>
+          <a href="#" class="tag">Busines Website</a>
+          <a href="#" class="tag">Feature Comparison</a>
+          <a href="#" class="tag">New Reviews Released</a>
+        </div>
+      </div>
+      <!-- <div class="website">
+        <div class="website-link">
+          <a href="#" class="website-link-link">link</a>
+          <a href="#" class="website-link-dropdown"><img src="images/outline_arrow_drop_down_black_24dp.png" alt="Dropdown"></a>
+          <a href="#" class="website-link-trans">Oversett denne siden</a>
+        </div>
+        <div class="website-title">
+          <a href="#">title</a>
+        </div>
+        <div class="website-info">
+          <p>description</p>
+        </div>
+        <div class="website-tags">
+          <a href="#" class="tag">tag</a>
+          <a href="#" class="tag">tag</a>
+          <a href="#" class="tag">tag</a>
+        </div>
+      </div> -->
+    </div>
     <footer>
       footer
     </footer>
