la til videomeny

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button href="#" class="tools-btn">Verktøy</button> 
       </div>
     </header>
+    <p class="results">Omtrent 121 000 000 resultater (0,40 sekunder) </p>
     <div class="link-section">
       <div class="top-ad">
         <div class="website">
@@ -117,6 +118,34 @@
         <div class="website-info">
           <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
         </div>
+      </div>
+      <div class="videos">
+        <div class="videos-title"><img src="images/outline_slideshow_black_24dp.png" alt="Videos Icon">Videoer</div>
+        <div class="videos-content">
+          <img src="https://www.pngitem.com/pimgs/m/525-5253012_youtube-logo-hd-png-download.png" alt="Video Thumbnail" class="thumbnail">
+          <div class="videos-desc">
+            <a href="#">link</a>
+            <p class="channel">channel</p>
+            <p>date</p>
+          </div>
+        </div>
+        <div class="videos-content">
+          <img src="https://www.pngitem.com/pimgs/m/525-5253012_youtube-logo-hd-png-download.png" alt="Video Thumbnail" class="thumbnail">
+          <div class="videos-desc">
+            <a href="#">link</a>
+            <p class="channel">channel</p>
+            <p>date</p>
+          </div>
+        </div>
+        <div class="videos-content videos-bottom-line">
+          <img src="https://www.pngitem.com/pimgs/m/525-5253012_youtube-logo-hd-png-download.png" alt="Video Thumbnail" class="thumbnail">
+          <div class="videos-desc">
+            <a href="#">link</a>
+            <p class="channel">channel</p>
+            <p>date</p>
+          </div>
+        </div>
+        <button href="#" class="see-all">Se alle</button>
       </div>
       <div class="website">
         <div class="website-link">
