gjorde ferdig hovedinnholdet

--- a/index.html
+++ b/index.html
@@ -147,6 +147,37 @@
         </div>
         <button href="#" class="see-all">Se alle</button>
       </div>
+      <div class="other-qs">
+        <h2 class="other-qs-title">Folk spør også om dette</h2>
+        <a href="#">
+          <div class="other-qs-q"> 
+            <h3 class="other-qs-q-text">How can I build my own website?</h3>
+            <img src="images/outline_expand_more_black_24dp.png" alt="">
+          </div>
+        </a>
+        <a href="#">
+          <div class="other-qs-q"> 
+            <h3 class="other-qs-q-text">What is building a website called?</h3>
+            <img src="images/outline_expand_more_black_24dp.png" alt="">
+          </div>
+        </a>
+        <a href="#">
+          <div class="other-qs-q"> 
+            <h3 class="other-qs-q-text">Can Google build a website?</h3>
+            <img src="images/outline_expand_more_black_24dp.png" alt="">
+          </div>
+        </a>
+        <a href="#">
+          <div class="other-qs-q"> 
+            <h3 class="other-qs-q-text">How do you create a website for free?</h3>
+            <img src="images/outline_expand_more_black_24dp.png" alt="">
+          </div>
+        </a>
+        <div class="other-qs-q other-qs-q-last">
+          <div class="line"></div>
+          <a href="#">Tilbakemelding</a>
+        </div>
+      </div>
       <div class="website">
         <div class="website-link">
           <a href="#" class="website-link-link">https://christine-27.github.io/google-homepage/</a>
