la til relaterte søk, side nav og footer

--- a/index.html
+++ b/index.html
@@ -332,8 +332,126 @@
         </div>
       </div> -->
     </div>
+    <div class="related">
+      <h2 class="related-title">Relaterte søk</h2>
+      <div class="related-searches">
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="related-search">
+            <img src="images/outline_search_black_24dp.png" alt="Search Icon">
+            <p>search</p>
+          </div>
+        </a>
+      </div>
+    </div>
     <footer>
-      footer
+      <div class="page-nav">
+        <img src="images/google-G.png" alt="Google G" class="logo-g">
+        <div>
+          <img src="images/google-red-O.png" alt="Google red O" class="logo-letter">
+          <p>1</p>
+        </div>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>2</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>3</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>4</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>5</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>6</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>7</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>8</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>9</p>
+        </a>
+        <a href="#">
+          <img src="images/google-yellow-O.png" alt="Google yellow O" class="logo-letter">
+          <p>10</p>
+        </a>
+        <img src="images/google-GLE.png" alt="Google gle" class="logo-gle">
+        <a href="#" class="nav-next">
+          <img src="images/blue-next.png" alt="Next page" class="nav-next">
+          <p>Neste</p>
+        </a>
+      </div>
+      <div class="footer-bg"><div class="footer">
+        <div class="footer-top">
+          <p class="country">Norge</p>
+          <div class="circle"></div>
+          <a href="#" class ="location">Skien -</a>
+          <a href="#">Fra IP-adressen din</a>
+          <p>-</p>
+          <a href="#">Oppdater posisjonen</a>
+        </div>
+        <div class="footer-bottom">
+          <a href="#">Hjelp</a>
+          <a href="#">Send tilbakemelding</a>
+          <a href="#">Personvern</a>
+          <a href="#">Vilkår</a>
+        </div>
+      </div>
+      <div class="footer-line-horiz"></div>
+      <div class="footer-line-vert"></div>
     </footer>
   </body>
 </html>
